[metadata]
name = airtigrs
description = Orchestration of TIGRLab dataflow infrastructure
long_description = file:README.md
long_description_content_type = text/markdown
keywords = neuroimaging, etl, automation, orchestration
classifiers =
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
project_urls =
	GitHub = https://github.com/tigrlab/air-tigrs
	Bug TRACKER = https://github.com/tigrlab/air-tigrs/issues
	Source Code = https://github.com/tigrlab/air-tigrs

[options]
python_requires = >= 3.7
install_requires =
	datman
	apache-airflow ~= 2.2.4
	apache-airflow-providers-sftp[ssh]

setup_requires =
        setuptools_scm
        toml

packages = find:
zip_safe = true

[options.extras_require]
# To use "pip install airtigrs[name]"
doc =
	sphinx >= 3
	sphinx_rtd_theme >= 0.5.0
	sphinx-multiversion
	sphinx-autodoc-typehints
docs =
	%(doc)s
lint =
	flake8 >= 3.7.0
	yapf >= 0.30.0
test =
	pytest >= 6.2.4
	pytest-mock
	pytest-cov
all =
	%(doc)s
	%(lint)s
	%(test)s
buildtest =
	%(lint)s
	%(test)s
